CSS fixes, excluded folders, exception for text-wrap

--- a/packages/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
+++ b/packages/special-pages/pages/release-notes/app/components/ReleaseNotes.module.css
@@ -138,7 +138,7 @@
 .listGrid {
     display: grid;
     gap: var(--sp-9);
-    width: 100;
+    width: 100%;
 }
 
 .list {
