--- a/packages/special-pages/shared/components/Text/Text.module.css
+++ b/packages/special-pages/shared/components/Text/Text.module.css
@@ -1,5 +1,5 @@
 a {
-    color: (--ddg-color-primary)
+    color: var(--ddg-color-primary)
 }
 
 .title-1 {
